--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
                     
 
                     <p>
-                        <button class="w3-btn w3-blue w3-margin-right">Register</button>
+                        <button class="w3-btn w3-blue">Register</button>
                         
                     </p>
 
